Fix form spacing and alignment

--- a/backend/seeds/static/seeds/styles.css
+++ b/backend/seeds/static/seeds/styles.css
@@ -361,6 +361,11 @@ audio {
     gap: 2rem;
 }
 
+.action-view * {
+    height: auto;
+    width: auto;
+}
+
 .association-options * {
     margin: .5rem;
     height: auto;
